syntax = "proto3";

package pollen.crypto.v1;

option go_package = "github.com/sambigeara/pollen/api/genpb/pollen/crypto/v1;cryptov1";

message NoiseStaticKey {
  bytes priv = 1;
  bytes pub = 2;
}
